# skills

./: CLAUDE.md  cli.py  convert_report_to_csv.py  env.local  pyproject.toml  report-full.csv  report-full.md  report.md
bib/: Da Xue Zhong Yong Ping Shi - Qiao Tong Ping Shi.txt  Dao De Jing Wang Bi Zhu Ben - Wang Bi.txt  Huang Di Nei Jing (Zhong Hua Jing Dian Min - Yao Chun Peng  Yi Zhu.txt  Lun Yu Yi Zhu - Yang Bo Jun.txt  Meng Zi Yi Zhu - Yang Bo Jun.txt  Shi Jing Yi Zhu -Guo Min Yue Du Jing Dian - Zhou Zhen Fu  Yi Zhu.txt  Sun Zi Bing Fa --Zhong Hua Jing Dian Zhi Z - Chen Xi Yi Zhu  [Chen Xi Yi Zhu ].txt  Tan Jing  (Zhong Hua Jing Dian Ming Zhu Qu - Shang Rong Yi Zhu.txt  Zhou Yi Jin Zhu Jin Yi [(Nan Huai Jin Fan - Wang Yun Wu Zhu Bian.txt  Zhuang Zi --Zhong Hua Jing Dian Cang Shu ( - Sun Tong Hai.txt
chats/detail/: 2026-04-28-01.md
core/: api.py  extract.py  extract_llm.py  index.py  llm.py  match.py  normalize.py  parse.py  report.py  types.py
core/bib/: registry.py  types.py
core/bib/parsers/: default.py
docs/: web-deploy-plan.md
manuscript/: 260427-幺弟解惑-引用校对结果-v1.xlsx  幺弟解惑-部分章节.docx
prompts/: extract.txt  judge.txt  map.txt  verify.txt
