[project]
name = "heimao-quote-check"
version = "0.1.0"
description = "黑猫核校 — 中文古籍引文核校工具"
requires-python = ">=3.11"
dependencies = [
    "docx2python>=2.10",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "rapidfuzz>=3.9",
    "opencc-python-reimplemented>=0.1.7",
    "openai>=1.40",
    "pyahocorasick>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
heimao = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
